unpackaged/main/default/objects/sked_Drive_Change_Request_Item__c/sked_Drive_Change_Request_Item__c.object-meta.xml
<CustomObject>
    <label>Drive Change Request Item</label>
    <nameField>
        <displayFormat>DCRI-{000000}</displayFormat>
        <label>Drive Change Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Change Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>