unpackaged/main/default/objects/sked_Drive_Change_Request_Item__c/fields/sked_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Change_Reason__c</fullName>
    <label>Change Reason</label>
    <type>TextArea</type>
</CustomField>