unpackaged/main/default/objects/sked_Drive_Change_Request_Item__c/fields/sked_DCR_Role_Field_Action__c.field-meta.xml
<CustomField>
    <fullName>sked_DCR_Role_Field_Action__c</fullName>
    <label>DCR Role Field Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>