unpackaged/main/default/objects/sked_Drive_Change_Request_Item__c/fields/sked_Drive_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Change_Request__c</fullName>
    <label>Drive Change Request</label>
    <referenceTo>sked_Drive_Change_Request__c</referenceTo>
    <relationshipLabel>Drive Change Request Items</relationshipLabel>
    <relationshipName>sked_Drive_Change_Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>