unpackaged/main/default/objects/sked_Drive_Change_Request_Item__c/fields/sked_New_Value_Display__c.field-meta.xml
<CustomField>
    <fullName>sked_New_Value_Display__c</fullName>
    <label>New Value Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>